Enable DataLoaderService.